--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W84NS62NV0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W84NS62NV0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-W84NS62NV0');
-</script>
+        gtag('config', 'G-W84NS62NV0');
+    </script>
 
 </head>
 
@@ -108,24 +108,19 @@
         <div data-aos="fade-down" data-aos-delay="400" data-aos-duration="1000"
             class="grow w-screen self-center px-3 md:px-6 order-2 md:order-1">
 
-            <h2 class="text-4xl font-extrabold dark:text-white">Frustración</h2>
-            <p class="my-4 text-lg text-gray-500">Nos encontramos en un momento en el que hay un gran problema,
-                la mayoria de las empresas o negocios estan estancados o no alcanzan su máximo potencial
-                ¿qué provoca esto? <br>
-                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
+            <h2 class="text-5xl font-extrabold dark:text-white px-2">¿Estás frustrado?</h2>
+            <p class="my-4 text-lg text-gray-500">El estancamiento y el no poder aprovechar al máximo el potencial de
+                nuestro negocio es uno de los principales problemas cuando emprendemos y esto provoca <span
+                    class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
                     Frustración
-                </span> <br>
+                </span>y
                 <span class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
                     Impotencia
-                </span> <br>
-                <span
-                    class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400 mt-8">
-                    Conformismo
                 </span>
             </p>
             <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">nos especializamos en impulsar el éxito
-                de tu negocio y sacar estas sensaciones de la ecuación. Como tu socio de crecimiento, estamos
-                comprometidos a ofrecerte soluciones integrales y efectivas para llevar tu empresa al siguiente nivel
+                de tu negocio y sacar estas sensaciones de la ecuación. Al adquirir nuestro servicio nos
+                comprometemos a ofrecerte una solución integral y efectiva para llevar tu empresa al siguiente nivel
             </p>
             <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
                 Contactanos
@@ -150,20 +145,8 @@
 
     <!-- servicios -->
     <section class="mt-10">
-        <div class="text-center md:mt-40 md:px-4 sm:px-4 mb-36">
-            <h2 class="mb-4 text-4xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span
-                    class="text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">¿como?</span>
-                nuestra estretagia</h2>
-            <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400 px-4">
-                Tras investigar exhaustivamente los desafíos que enfrentan la mayoría de las empresas, hemos llegado a
-                una conclusión reveladora: son pocos los que logran destacarse en línea. Esto se debe a la falta de
-                inversión en una estrategia de marketing sólida y a la ausencia de un embudo de ventas y un proceso
-                adaptado y diseñado para convertir leads en clientes.</p>
-        </div>
-
-
         <div class="flex flex-col justify-stretch">
-            <div class="mb-10">
+            <div>
                 <h2
                     class="animate-jump animate-infinite animate-duration-[4000ms] animate-ease-linear text-4xl font-extrabold dark:text-white text-center">
                     Hoy en el
@@ -173,14 +156,14 @@
 
             <div class="bg-white rounded-lg md:p-8 dark:bg-gray-800 flex flex-col justify-between gap-10" id="stats"
                 role="tabpanel" aria-labelledby="stats-tab">
-                <dl
-                    class="grid max-w-screen-xl grid-cols-1 gap-8 md:gap-0 mx-auto text-gray-900 sm:grid-cols-3 xl:grid-cols-6 dark:text-white sm:py-8">
+                <dl class="flex flex-col justify-between gap-10 mt-10 md:flex-row md:mt-10">
                     <div data-aos="fade-down" data-aos-delay="100" data-aos-duration="1000"
                         class="flex flex-col items-center justify-start text-center mx-2">
                         <dt
                             class="mb-2 text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
                             +50%</dt>
-                        <dd class="text-gray-500 dark:text-gray-400 px-2">Empresas con sitios web sin convertibilidad
+                        <dd class="text-gray-500 dark:text-gray-400 px-4 text-xl font-semibold">De las empresas tienen un sitio web sin
+                            convertibilidad
                         </dd>
                     </div>
                     <div data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000"
@@ -188,7 +171,8 @@
                         <dt
                             class="mb-2 text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400 text-center">
                             +36%</dt>
-                        <dd class="text-gray-500 dark:text-gray-400 px-2 text-center">negocios y empresas sin página web
+                        <dd class="text-gray-500 dark:text-gray-400 px-4 text-center text-xl font-semibold">De los negocios y empresas no
+                            tienen página web
                         </dd>
                     </div>
                     <div data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000"
@@ -196,7 +180,8 @@
                         <dt
                             class="mb-2 text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
                             +2.8</dt>
-                        <dd class="text-gray-500 dark:text-gray-400 px-2">Empresas que invierten en marketing ganan 2.8
+                        <dd class="text-gray-500 dark:text-gray-400 px-4 text-xl font-semibold">Las Empresas que invierten en marketing ganan
+                            2.8
                             veces
                             más.</dd>
                     </div>
@@ -205,26 +190,34 @@
                         <dt
                             class="mb-2 text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
                             +200%</dt>
-                        <dd class="text-gray-500 dark:text-gray-400 px-2">ROI para empresas que hacen campañas en google
-                            ads
+                        <dd class="text-gray-500 dark:text-gray-400 px-4 text-xl font-semibold">ROI (Retorno de inversión) para empresas que
+                            hacen campañas de anuncios en sus sitios web
                         </dd>
                     </div>
                     <div data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000"
                         class="flex flex-col items-center justify-start text-center text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400 mx-2">
                         <dt class="mb-2 text-4xl font-extrabold px-2">+Fracaso</dt>
-                        <dd class="text-gray-500 dark:text-gray-400 px-2">las empresas que no destacan en linea pierden
+                        <dd class="text-gray-500 dark:text-gray-400 px-4 text-xl font-semibold">las empresas que no destacan en linea pierden
                             ante
                             sus competidores.</dd>
                     </div>
                     <div data-aos="fade-down" data-aos-delay="200" data-aos-duration="1000"
                         class="flex flex-col items-center justify-start text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400 text-center mb-10 mx-2">
-                        <dt class="mb-2 text-4xl sm:text-2xl font-extrabold">2.35%</dt>
-                        <dd class="text-gray-500 dark:text-gray-400 px-2">Según Adobe, la tasa de conversión promedio es
-                            del
-                            2.35%. Sin optimización, es difícil aumentarla.</dd>
+                        <dt class="mb-2 text-4xl font-extrabold">2.35%</dt>
+                        <dd class="text-gray-500 dark:text-gray-400 px-4 text-xl font-semibold">Es la tasa de conversión promedio,
+                            Sin optimización, es difícil aumentarla.</dd>
                     </div>
                 </dl>
             </div>
+        </div>
+        <div class="text-center md:mt-40 md:px-4 sm:px-4 mb-36 flex flex-col items-center">
+            <img  data-aos="fade-down" data-aos-delay="200" data-aos-duration="2000" class="w-1/3 mt-10" src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/problem-solver-solution-problem-solving-skill-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3Byb2JsZW0tc29sdmVyLXNvbHV0aW9uLXByb2JsZW0tc29sdmluZy1za2lsbC1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTI1MjM4NTIsImV4cCI6MTc0NDA1OTg1Mn0.D_lWXYdBvDdjak1m2PuBXq-oIfInNW7wWYiAmNFYWZE&t=2024-04-07T21%3A04%3A13.171Z" alt="img solución" srcset="">
+            <h2
+                class="text-4xl py-2 font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
+                ¿La solución?
+            </h2>
+            <p class="text-lg font-extrabold text-gray-500 lg:text-xl dark:text-gray-400 px-4">
+                Conocemos las dificultades que se presentan a la hora de querer crecer, y sabemos cuan complicado es lograr éxito, por eso queremos ayudarte</p>
         </div>
     </section>
 
@@ -232,15 +225,14 @@
 
     <!-- presentacion solución -->
     <section class="flex md:flex-row flex-col bg-green-400 py-20 px-12">
-        <div data-aos="fade-right" data-aos-offset="300" data-aos-duration="2000" data-aos-easing="ease-in-sine"
+        <div data-aos="fade-up" data-aos-offset="300" data-aos-duration="2000" data-aos-easing="ease-in-sine"
             class="text-start md:text-start w-full md:w-1/2 order-1 md:order-2 self-center">
             <h2
                 class="mb-10 text-4xl font-extrabold leading-10 tracking-tight text-gray-900 md:text-4xl lg:text-5xl dark:text-white">
-                Esta es la realidad para muchos, pero no tiene porque seguir siendo asi, con nuestro servcio te traemos
-                una <span class="text-violet-400 dark:text-blue-500">solución <br></span> que lograra conseguir lo que
-                buscas</h2>
+                Esta es la realidad de muchos, pero no tiene porque ser la tuya. Nosotros te ofrecemos lo que necesitás para conseguir lo que 
+                <span class="text-violet-400 font-extrabold">buscas<br></span></h2>
         </div>
-        <div data-aos="fade-down" data-aos-delay="1500" data-aos-duration="1500"
+        <div data-aos="fade-up" data-aos-duration="3000"
             class="flex flex-col grow order-2 md:order mt-5">
             <img class="w-full h-96 md:ml-16"
                 src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/business-presentation-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2J1c2luZXNzLXByZXNlbnRhdGlvbi1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTA5NTU2NjgsImV4cCI6MTc0MjQ5MTY2OH0.vSRY2aw79A1aO3FnNiyqX0gBUa5c-tEcQ6bMu3F5CjA&t=2024-03-20T17%3A27%3A48.380Z"
