--- a/index.html
+++ b/index.html
@@ -210,21 +210,8 @@
                 </dl>
             </div>
         </div>
-        <div class="text-center md:mt-40 md:px-4 sm:px-4 mb-36 flex flex-col items-center">
-            <img  data-aos="fade-down" data-aos-delay="200" data-aos-duration="2000" class="w-1/3 mt-10" src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/problem-solver-solution-problem-solving-skill-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3Byb2JsZW0tc29sdmVyLXNvbHV0aW9uLXByb2JsZW0tc29sdmluZy1za2lsbC1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTI1MjM4NTIsImV4cCI6MTc0NDA1OTg1Mn0.D_lWXYdBvDdjak1m2PuBXq-oIfInNW7wWYiAmNFYWZE&t=2024-04-07T21%3A04%3A13.171Z" alt="img solución" srcset="">
-            <h2
-                class="text-4xl py-2 font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
-                ¿La solución?
-            </h2>
-            <p class="text-lg font-extrabold text-gray-500 lg:text-xl dark:text-gray-400 px-4">
-                Conocemos las dificultades que se presentan a la hora de querer crecer, y sabemos cuan complicado es lograr éxito, por eso queremos ayudarte</p>
-        </div>
-    </section>
-
-
-
-    <!-- presentacion solución -->
-    <section class="flex md:flex-row flex-col bg-green-400 py-20 px-12">
+            <!-- presentacion solución -->
+    <div class="flex md:flex-row flex-col bg-green-400 py-20 px-12">
         <div data-aos="fade-up" data-aos-offset="300" data-aos-duration="2000" data-aos-easing="ease-in-sine"
             class="text-start md:text-start w-full md:w-1/2 order-1 md:order-2 self-center">
             <h2
@@ -242,9 +229,19 @@
                 alt="five starts">
         </div>
 
+    </div>
     </section>
     <!-- servicio -->
     <section class="flex flex-col px-2 gap-2 py-6 h-full">
+        <div class="text-center md:mt-40 md:px-4 sm:px-4 mb-10 flex flex-col items-center">
+            <img  data-aos="fade-down" data-aos-delay="200" data-aos-duration="2000" class="w-1/3 mt-10" src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/problem-solver-solution-problem-solving-skill-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3Byb2JsZW0tc29sdmVyLXNvbHV0aW9uLXByb2JsZW0tc29sdmluZy1za2lsbC1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTI1MjM4NTIsImV4cCI6MTc0NDA1OTg1Mn0.D_lWXYdBvDdjak1m2PuBXq-oIfInNW7wWYiAmNFYWZE&t=2024-04-07T21%3A04%3A13.171Z" alt="img solución" srcset="">
+            <h2
+                class="text-4xl py-2 font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
+                ¿La solución?
+            </h2>
+            <p class="text-lg font-extrabold text-gray-500 lg:text-xl dark:text-gray-400 px-4">
+                Conocemos las dificultades que se presentan a la hora de querer crecer, y sabemos cuan complicado es lograr éxito, por eso queremos ayudarte</p>
+        </div>
         <div class="md:flex md:justify-around items-start py-9 md:mt-10">
             <div data-aos="fade-down-right" data-aos-delay="200"
                 class="flex flex-col justify-center items-center text-center md:w-1/2 md:border-r-2 md:border-violet-400 md:h-64 mb-10 md:mb-0">
